--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,10 @@ gen/
 out/
 
 # Gradle files
+gradlew
+gradlew.bat
 .gradle/
+gradle/
 build/
 
 # Local configuration file (sdk path, etc)
@@ -34,11 +37,15 @@ captures/
 
 # Intellij
 *.iml
+.idea/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/dictionaries
 .idea/libraries
+.idea/encodings.xml
+.idea/misc.xml
+.idea/runConfigurations.xml
 
 # Keystore files
 *.jks
